fixed the table and bottom spacing of cards

--- a/resources/css/stats.css
+++ b/resources/css/stats.css
@@ -1,7 +1,4 @@
 @media screen and (min-width: 800px){
-    .bar-chart{
-
-    }
     .polar-area{
         height: 700px;
         width: 700px;
